fixed horizontal scroll responsive

--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ header {
 
 @media screen and (max-width: 768px) {
     body {
-        width: 96%;
-        margin: auto;
+        margin: 0;
         padding: 0;
         background-color: #222222;
         box-sizing: border-box;
@@ -79,6 +78,7 @@ header {
         display: block;
         position: relative;
         margin-bottom: 12.5%;
+        overflow-x: hidden !important;
     }
 
     .gshadow {
